# rk3399PRO

./: .gitignore  CMakeLists.txt  config.hpp  get_libs.sh  libai_core.cpp  libai_core.hpp  readme.md  test.cpp  test_abandon.cpp  test_any_model.cpp  test_classification.cpp  test_face_feature_extraction.cpp  test_face_feature_extraction_with_detection.cpp  test_licplate_recognition.cpp  test_loop.cpp  test_one.cpp  test_phone.cpp  test_resnet.cpp  test_thread.cpp  test_thread_new.cpp  test_video.cpp  test_yolo.cpp
cmake/: cross-compile.cmake
jsoncpp/: jsoncpp.cpp
main_backup/: test_phone.cpp  test_yolo.cpp
utils/: basic.cpp  basic.hpp  framework_detection.cpp  framework_detection.hpp  imp_abandon_object.cpp  imp_abandon_object.hpp  imp_fire_detection.cpp  imp_fire_detection.hpp  imp_licplate_detection.cpp  imp_licplate_detection.hpp  imp_ped_skeleton.cpp  imp_ped_skeleton.hpp  imp_phone.cpp  imp_phone.hpp  imp_smoke_cig_detection.cpp  imp_smoke_cig_detection.hpp  module_abandon_object.cpp  module_abandon_object.hpp  module_base.cpp  module_base.hpp  module_classify.cpp  module_classify.hpp  module_feature_extraction.cpp  module_feature_extraction.hpp  module_fire_detection.cpp  module_fire_detection.hpp  module_lprnet.cpp  module_lprnet.hpp  module_mod_traditional.cpp  module_mod_traditional.hpp  module_nn_match.cpp  module_nn_match.hpp  module_phone.cpp  module_phone.hpp  module_posenet.cpp  module_posenet.hpp  module_retinaface.cpp  module_retinaface.hpp  module_siso.cpp  module_siso.hpp  (+13 more)
utils/drm/: drm_func.c  drm_func.h  rga_func.c  rga_func.h
utils/json_encoder/: EnumToString.hpp  json_encoder.cpp  json_encoder.hpp  json_proxy_template.hpp  ucloud_json_format.hpp
utils/trackor/bytetrack_no_reid/: BYTETracker.cpp  BYTETracker.h  BYTETracker_no_reid.cpp  BYTETracker_no_reid.h  STrack.cpp  STrack.h  STrack_no_reid.cpp  STrack_no_reid.h  dataType.h  dataType_no_reid.h  kalmanFilter_no_reid.cpp  kalmanFilter_no_reid.h  lapjv_no_reid.cpp  lapjv_no_reid.h  utils.cpp  utils_no_reid.cpp
utils/trackor/bytetrack_origin/: BYTETracker_origin.cpp  BYTETracker_origin.h  STrack_origin.cpp  STrack_origin.h  dataType_origin.h  kalmanFilter_origin.cpp  kalmanFilter_origin.h  lapjv_origin.cpp  lapjv_origin.h  utils_origin.cpp
